--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Coffs Coast Electronics</title>
+  <meta name="description" content="Coffs Coast Electronics">
+  <meta name="author" content="Coffs Coast Electronics business website">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
+<body>
+  <h1>Welcome to Coffs Coast Electronics</h1>
+  <p>You can reach us at <a href="tel:0266528601">(02) 66528601</a></p>
+  <p>Or email us at <a href="mailto:ccelectronics10@gmail.com">ccelectronics10@gmail.com</a></p>
+  <script src="js/scripts.js"></script>
+</body>
+</html>
+
+
 Hello World
