javascript redirect added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+  <script>window.location = "https://coffs-coast-electronics.business.site";</script>
 <head>
   <meta charset="utf-8">
 
