--- a/index.html
+++ b/index.html
@@ -1,22 +1,89 @@
 <!doctype html>
-
 <html lang="en">
-  <script>window.location = "https://coffs-coast-electronics.business.site";</script>
 <head>
   <meta charset="utf-8">
-
   <title>Coffs Coast Electronics</title>
-  <meta name="description" content="Coffs Coast Electronics">
-  <meta name="author" content="Coffs Coast Electronics business website">
+  <meta name="description" content="Coffs Coast Electronics are now closed">
+  <meta name="author" content="Coffs Coast Electronics">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <style>
+    html {
+      height:100%;
+      width:100%;
+    }
+    body {
+      height:100%;
+      width:100%;
+      font-family: 'Inter', sans-serif;
+      background-image:url('./bg3.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color:white;
+      overflow-x: hidden;
+      font-size:0.9rem;
+      line-height: 1.2;
+    }
+    .contentWrap {
+      margin:20px auto;
+      max-width: 750px;
+      width:96%;
+      background:rgba(0,0,0,0.8);
+      border-radius: 5px;
+    }
+    .innerContent {
+      padding:8%;
+    }
+    h1 {
+      color: #60a5a5;
+      text-align: center;
+      font-weight:700;
+      font-size: 1.5rem;
+      line-height:1.1;
+      margin-bottom:30px;
+    }
+    p {
+      margin-bottom:15px;
+      
+    }
+    a {
+      color:#60a5a5;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    @media (min-width:768px) {
+      p,a {
+        font-size:1.2rem;
+        line-height:1.4;
+        margin-bottom:20px;
+      }
+      h1{
+        font-size:2.5rem;
+        margin-bottom:40px;
+        line-height:1.3;
+      }
+    }
+  </style>
 
 </head>
 
 <body>
-  <h1>Welcome to Coffs Coast Electronics</h1>
-  <p>You can reach us at <a href="tel:0266528601">(02) 66528601</a></p>
-  <p>Or email us at <a href="mailto:ccelectronics10@gmail.com">ccelectronics10@gmail.com</a></p>
+  <div class="contentWrap">
+    <div class="innerContent">
+      <h1>Coffs Coast Electronics would like to thank the Coffs Coast for their many years of support</h1>
+    <p>Richard has announced his retirement and is now relaxing on a beach with a Mojito!</p>
+    <p>If you a having any issues we recommend contacting Terry from All Things TV on <a href="tel:0408582690">0408 58 2690</a></p>
+    </div>
+  </div>
   <script src="js/scripts.js"></script>
 </body>
 </html>
