--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       color: #60a5a5;
       text-align: center;
       font-weight:700;
-      font-size: 2.5rem;
+      font-size: 1.5rem;
       line-height:1.1;
       margin-bottom:30px;
     }
@@ -60,14 +60,14 @@
     a:hover {
       text-decoration: underline;
     }
-    @media (min-width:768px) {
+    @media only screen and (min-width:768px) {
       p,a {
         font-size:1.2rem;
         line-height:1.4;
         margin-bottom:20px;
       }
       h1{
-        font-size:2.5rem;
+        font-size:50px;
         margin-bottom:40px;
         line-height:1.3;
       }
